Host/Utilities/PlumeCamera/MeasurementComputing/cbw.h



#define AIFUNCTION      1    /* Analog Input Function    */
#define AOFUNCTION      2    /* Analog Output Function   */
#define DIFUNCTION      3    /* Digital Input Function   */
#define DOFUNCTION      4    /* Digital Output Function  */
#define CTRFUNCTION     5    /* Counter Function         */
#define DAQIFUNCTION    6    /* Daq Input Function       */
#define DAQOFUNCTION	7    /* Daq Output Function      */

/* Status values */
#define IDLE             0
#define RUNNING          1


/* Option Flags */
#define FOREGROUND       0x0000    /* Run in foreground, don't return till done */
#define BACKGROUND       0x0001    /* Run in background, return immediately */

#define SINGLEEXEC       0x0000    /* One execution */
#define CONTINUOUS       0x0002    /* Run continuously until cbstop() called */

#define TIMED            0x0000    /* Time conversions with internal clock */
#define EXTCLOCK         0x0004    /* Time conversions with external clock */

#define NOCONVERTDATA    0x0000    /* Return raw data */
#define CONVERTDATA      0x0008    /* Return converted A/D data */

#define NODTCONNECT      0x0000    /* Disable DT Connect */
#define DTCONNECT        0x0010    /* Enable DT Connect */
#define SCALEDATA        0x0010    /* Scale scan data to engineering units */

#define DEFAULTIO        0x0000    /* Use whatever makes sense for board */
#define SINGLEIO         0x0020    /* Interrupt per A/D conversion */
#define DMAIO            0x0040    /* DMA transfer */
#define BLOCKIO          0x0060    /* Interrupt per block of conversions */
#define BURSTIO         0x10000    /* Transfer upon scan completion */
#define RETRIGMODE      0x20000    /* Re-arm trigger upon acquiring trigger count samples */
#define NONSTREAMEDIO  0x040000    /* Non-streamed D/A output */
#define ADCCLOCKTRIG   0x080000    /* Output operation is triggered on ADC clock */
#define ADCCLOCK       0x100000    /* Output operation is paced by ADC clock */
#define HIGHRESRATE	   0x200000	   /* Use high resolution rate */
#define SHUNTCAL	   0x400000	   /* Enable Shunt Calibration */

#define BYTEXFER         0x0000    /* Digital IN/OUT a byte at a time */
#define WORDXFER         0x0100    /* Digital IN/OUT a word at a time */

#define INDIVIDUAL       0x0000    /* Individual D/A output */
#define SIMULTANEOUS     0x0200    /* Simultaneous D/A output */

#define FILTER           0x0000    /* Filter thermocouple inputs */
#define NOFILTER         0x0400    /* Disable filtering for thermocouple */

#define NORMMEMORY       0x0000    /* Return data to data array */
#define EXTMEMORY        0x0800    /* Send data to memory board ia DT-Connect */

#define BURSTMODE        0x1000    /* Enable burst mode */

#define NOTODINTS        0x2000    /* Disbale time-of-day interrupts */

#define EXTTRIGGER       0x4000     /* A/D is triggered externally */

#define NOCALIBRATEDATA  0x8000    /* Return uncalibrated PCM data */
#define CALIBRATEDATA    0x0000    /* Return calibrated PCM A/D data */

#define CTR16BIT		 0x0000	   /* Return 16-bit counter data */
#define CTR32BIT		 0x0100	   /* Return 32-bit counter data */
#define CTR48BIT		 0x0200	   /* Return 48-bit counter data */

#define ENABLED          1
#define DISABLED         0

#define UPDATEIMMEDIATE  0
#define UPDATEONCOMMAND  1


/* Selectable A/D Ranges codes */
#define BIP60VOLTS       20              /* -60 to 60 Volts */
#define BIP20VOLTS       15              /* -20 to +20 Volts */
#define BIP15VOLTS       21              /* -15 to +15 Volts */
#define BIP10VOLTS       1              /* -10 to +10 Volts */
#define BIP5VOLTS        0              /* -5 to +5 Volts */
#define BIP4VOLTS        16             /* -4 to + 4 Volts */
#define BIP2PT5VOLTS     2              /* -2.5 to +2.5 Volts */
#define BIP2VOLTS        14             /* -2.0 to +2.0 Volts */
#define BIP1PT25VOLTS    3              /* -1.25 to +1.25 Volts */
#define BIP1VOLTS        4              /* -1 to +1 Volts */
#define BIPPT625VOLTS    5              /* -.625 to +.625 Volts */
#define BIPPT5VOLTS      6              /* -.5 to +.5 Volts */
#define BIPPT25VOLTS     12              /* -0.25 to +0.25 Volts */
#define BIPPT2VOLTS      13              /* -0.2 to +0.2 Volts */
#define BIPPT1VOLTS      7              /* -.1 to +.1 Volts */
#define BIPPT05VOLTS     8              /* -.05 to +.05 Volts */
#define BIPPT01VOLTS     9              /* -.01 to +.01 Volts */
#define BIPPT005VOLTS    10             /* -.005 to +.005 Volts */
#define BIP1PT67VOLTS    11             /* -1.67 to +1.67 Volts */
#define BIPPT312VOLTS    17				 /* -0.312 to +0.312 Volts */
#define BIPPT156VOLTS    18				 /* -0.156 to +0.156 Volts */
#define BIPPT125VOLTS    22				 /* -0.125 to +0.125 Volts */
#define BIPPT078VOLTS    19				 /* -0.078 to +0.078 Volts */


/* Types of configuration information */
#define GLOBALINFO         1
#define BOARDINFO          2
#define DIGITALINFO        3
#define COUNTERINFO        4
#define EXPANSIONINFO      5
#define MISCINFO           6
#define EXPINFOARRAY	   7
#define MEMINFO            8
#define BIBOARDTYPE         1       /* Board Type (0x101 - 0x7FFF) */

#define BIADRES				  291
#define BIDACRES			  292
  typedef unsigned short USHORT;

    int EXTCCONV cbAInScan (int BoardNum, int LowChan, int HighChan, long Count,
                            long *Rate, int Gain, HGLOBAL MemHandle, 
							int Options);

    int EXTCCONV cbALoadQueue (int BoardNum, short *ChanArray, short *GainArray, 
		                       int NumChans);

    int EXTCCONV cbAOut (int BoardNum, int Chan, int Gain, USHORT DataValue);

    int EXTCCONV cbAOutScan (int BoardNum, int LowChan, int HighChan, 
		                     long Count, long *Rate, int Gain, 
							 HGLOBAL MemHandle, int Options);

    int EXTCCONV cbErrHandling (int ErrReporting, int ErrHandling);

    int EXTCCONV cbGetIOStatus (int BoardNum, short *Status, long *CurCount,
                              long *CurIndex,int FunctionType);

    int EXTCCONV cbStopIOBackground (int BoardNum, int FunctionType);


    HGLOBAL EXTCCONV cbWinBufAlloc (long NumPoints);

    HGLOBAL EXTCCONV cbWinBufAlloc32 (long NumPoints);

    HGLOBAL EXTCCONV cbWinBufAlloc64 (long NumPoints);

    int EXTCCONV cbWinBufFree (HGLOBAL MemHandle);


    int EXTCCONV cbGetConfig (int InfoType, int BoardNum, int DevNum, 
                              int ConfigItem, int *ConfigVal);


//****************************************************************************
//   Legacy Function Prototypes: to revert to legacy calls, un-comment the
//          prototypes immediately below.
//
//      int EXTCCONV cbGetStatus (int BoardNum, short *Status, long *CurCount, long *CurIndex);
//      int EXTCCONV cbStopBackground (int BoardNum);
//
//   Remove the following if using the above legacy function prototypes.
#define cbGetStatus cbGetIOStatus
#define cbStopBackground cbStopIOBackground